fixed: tap targets are too small

--- a/src/styles/mixins/card-list.scss
+++ b/src/styles/mixins/card-list.scss
@@ -102,7 +102,7 @@
 
   &__date,
   &__category {
-    margin: rem(0 0 10px 0);
+    margin: rem(0 0 16px 0);
     font-size: rem(14px);
     color: $color-text-lighter;
 
