--- a/src/styles/mixins/pill.scss
+++ b/src/styles/mixins/pill.scss
@@ -12,7 +12,7 @@
     position: relative;
     display: inline-block;
     padding: rem(0 10px);
-    min-width: rem(46px - 20px);
+    min-width: rem(48px - 20px);
     background: $bg;
     transition: transform 0.3s;
     transform-origin: 50% 0;
